--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "core-js": "^2.5.4",
     "firebase": "^5.5.2",
     "rxjs": "~6.2.0",
+    "synaptic": "^1.1.4",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
