--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "firebase": "^5.5.2",
+    "html2canvas": "^1.0.0-alpha.12",
+    "jspdf": "^1.4.1",
     "ngx-bootstrap": "^3.0.1",
+    "pdfmake": "^0.1.39",
     "rxjs": "~6.2.0",
     "synaptic": "^1.1.4",
     "zone.js": "~0.8.26"
